--- a/package.json
+++ b/package.json
@@ -1,101 +1,114 @@
 {
-  "name": "ortnec",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "autoprefixer": "7.1.6",
-    "babel-core": "6.26.0",
-    "babel-eslint": "7.2.3",
-    "babel-jest": "20.0.3",
-    "babel-loader": "7.1.2",
-    "babel-preset-react-app": "^3.1.1",
-    "babel-runtime": "6.26.0",
-    "case-sensitive-paths-webpack-plugin": "2.1.1",
-    "chalk": "1.1.3",
-    "classnames": "^2.2.5",
-    "css-loader": "0.28.7",
-    "dotenv": "4.0.0",
-    "dotenv-expand": "4.2.0",
-    "eslint": "^4.19.1",
-    "eslint-config-react-app": "^2.1.0",
-    "eslint-loader": "1.9.0",
-    "eslint-plugin-flowtype": "2.39.1",
-    "eslint-plugin-import": "2.8.0",
-    "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-react": "7.4.0",
-    "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "1.1.5",
-    "fs-extra": "3.0.1",
-    "html-webpack-plugin": "2.29.0",
-    "jest": "20.0.4",
-    "node-sass": "^4.9.0",
-    "object-assign": "4.1.1",
-    "postcss-flexbugs-fixes": "3.2.0",
-    "postcss-loader": "2.0.8",
-    "promise": "8.0.1",
-    "raf": "3.4.0",
-    "react": "^16.4.1",
-    "react-dev-utils": "^5.0.1",
-    "react-dom": "^16.4.1",
-    "resolve": "1.6.0",
-    "sass-loader": "^7.0.1",
-    "style-loader": "0.19.0",
-    "sw-precache-webpack-plugin": "0.11.4",
-    "url-loader": "0.6.2",
-    "webpack": "3.8.1",
-    "webpack-dev-server": "2.9.4",
-    "webpack-manifest-plugin": "1.3.2",
-    "whatwg-fetch": "2.0.3"
+  "name": "react-redux-boilerplate",
+  "version": "1.0.0",
+  "description": "A minimal react-redux boilerplate with all the best practices",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/flexdinesh/react-redux-boilerplate.git"
   },
+  "engines": {
+    "npm": ">=3",
+    "node": ">=5"
+  },
+  "author": "Dinesh Pandiyan",
+  "license": "MIT",
   "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "prebuild": "npm run build:clean",
+    "build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.babel.js --color -p --progress --hide-modules --display-optimization-bailout",
+    "build:clean": "rimraf ./build",
+    "start": "cross-env NODE_ENV=development node server",
+    "start:production": "npm run test && npm run build && npm run start:prod",
+    "start:prod": "cross-env NODE_ENV=production node server",
+    "clean": "npm run test:clean && npm run build:clean",
+    "lint": "npm run lint:js",
+    "lint:eslint": "eslint --ignore-path .gitignore",
+    "eslint:fix": "eslint -- . --ignore-path .gitignore --fix",
+    "lint:js": "npm run lint:eslint -- . ",
+    "pretest": "npm run test:clean && npm run lint",
+    "test:clean": "rimraf ./coverage",
+    "test": "cross-env NODE_ENV=test jest --coverage",
+    "test:watch": "cross-env NODE_ENV=test jest --watchAll"
   },
-  "jest": {
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx,mjs}"
-    ],
-    "setupFiles": [
-      "<rootDir>/config/polyfills.js"
-    ],
-    "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.{js,jsx,mjs}",
-      "<rootDir>/src/**/?(*.)(spec|test).{js,jsx,mjs}"
-    ],
-    "testEnvironment": "node",
-    "testURL": "http://localhost",
-    "transform": {
-      "^.+\\.(js|jsx|mjs)$": "<rootDir>/node_modules/babel-jest",
-      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-      "^(?!.*\\.(js|jsx|mjs|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
-    },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs)$"
-    ],
-    "moduleNameMapper": {
-      "^react-native$": "react-native-web"
-    },
-    "moduleFileExtensions": [
-      "web.js",
-      "js",
-      "json",
-      "web.jsx",
-      "jsx",
-      "node",
-      "mjs"
-    ]
-  },
-  "babel": {
-    "presets": [
-      "react-app"
-    ]
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+  "dependencies": {
+    "babel-polyfill": "6.26.0",
+    "chalk": "^2.3.2",
+    "compression": "1.7.2",
+    "cross-env": "^5.1.6",
+    "express": "4.16.3",
+    "fontfaceobserver": "2.0.13",
+    "history": "4.7.2",
+    "hoist-non-react-statics": "2.5.0",
+    "immutable": "3.8.2",
+    "invariant": "2.2.4",
+    "ip": "1.1.5",
+    "lodash": "^4.17.10",
+    "minimist": "1.2.0",
+    "prop-types": "15.6.1",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
+    "react-helmet": "5.2.0",
+    "react-loadable": "^5.4.0",
+    "react-redux": "5.0.7",
+    "react-router-dom": "^4.3.1",
+    "react-router-redux": "5.0.0-alpha.6",
+    "redux": "^4.0.0",
+    "redux-immutable": "4.0.0",
+    "redux-saga": "0.16.0",
+    "reselect": "3.0.1",
+    "sanitize.css": "^5.0.0",
+    "warning": "^4.0.1",
+    "whatwg-fetch": "2.0.4"
   },
   "devDependencies": {
-    "eslint": "^4.19.1",
-    "eslint-plugin-react": "^7.9.1"
+    "add-asset-html-webpack-plugin": "2.1.3",
+    "babel-cli": "6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "8.2.3",
+    "babel-loader": "7.1.4",
+    "babel-plugin-dynamic-import-node": "1.2.0",
+    "babel-plugin-react-transform": "3.0.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "babel-plugin-transform-react-constant-elements": "6.23.0",
+    "babel-plugin-transform-react-inline-elements": "6.22.0",
+    "babel-plugin-transform-react-remove-prop-types": "0.4.13",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-0": "6.24.1",
+    "circular-dependency-plugin": "5.0.2",
+    "css-loader": "0.28.11",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "eslint": "4.19.1",
+    "eslint-config-airbnb": "16.1.0",
+    "eslint-config-airbnb-base": "12.1.0",
+    "eslint-import-resolver-webpack": "^0.10.0",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-jsx-a11y": "6.0.3",
+    "eslint-plugin-react": "^7.9.1",
+    "eslint-plugin-redux-saga": "^0.9.0",
+    "eventsource-polyfill": "0.9.6",
+    "exports-loader": "0.7.0",
+    "file-loader": "1.1.11",
+    "html-loader": "0.5.5",
+    "html-webpack-plugin": "3.2.0",
+    "image-webpack-loader": "^4.3.1",
+    "imports-loader": "0.8.0",
+    "jest-cli": "^23.1.0",
+    "lint-staged": "^7.1.3",
+    "node-plop": "^0.15.0",
+    "node-sass": "^4.7.2",
+    "null-loader": "0.1.1",
+    "plop": "2.0.0",
+    "react-test-renderer": "^16.4.0",
+    "rimraf": "2.6.2",
+    "sass-loader": "^7.0.1",
+    "shelljs": "^0.8.1",
+    "style-loader": "^0.21.0",
+    "svg-spritemap-webpack-plugin": "^2.6.0",
+    "url-loader": "1.0.1",
+    "webpack": "^4.12.0",
+    "webpack-cli": "^3.0.3",
+    "webpack-dev-middleware": "^3.1.3",
+    "webpack-hot-middleware": "^2.22.2"
   }
 }
