--- a/.babelrc
+++ b/.babelrc
@@ -11,7 +11,7 @@
   ],
   "env": {
     "production": {
-      "only": ["app"],
+      "only": ["src"],
       "plugins": [
         "transform-react-remove-prop-types",
         "transform-react-constant-elements",
