--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "redux": "^4.0.0",
     "redux-immutable": "4.0.0",
     "redux-saga": "0.16.0",
+    "redux-thunk": "^2.3.0",
     "reselect": "3.0.1",
     "sanitize.css": "^5.0.0",
     "warning": "^4.0.1",
