--- a/package.json
+++ b/package.json
@@ -13,21 +13,7 @@
   "author": "Dinesh Pandiyan",
   "license": "MIT",
   "scripts": {
-    "prebuild": "npm run build:clean",
-    "build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.babel.js --color -p --progress --hide-modules --display-optimization-bailout",
-    "build:clean": "rimraf ./build",
-    "start": "cross-env NODE_ENV=development node server",
-    "start:production": "npm run test && npm run build && npm run start:prod",
-    "start:prod": "cross-env NODE_ENV=production node server",
-    "clean": "npm run test:clean && npm run build:clean",
-    "lint": "npm run lint:js",
-    "lint:eslint": "eslint --ignore-path .gitignore",
-    "eslint:fix": "eslint -- . --ignore-path .gitignore --fix",
-    "lint:js": "npm run lint:eslint -- . ",
-    "pretest": "npm run test:clean && npm run lint",
-    "test:clean": "rimraf ./coverage",
-    "test": "cross-env NODE_ENV=test jest --coverage",
-    "test:watch": "cross-env NODE_ENV=test jest --watchAll"
+    "start": "webpack-dev-server --mode development --open",
   },
   "dependencies": {
     "babel-polyfill": "6.26.0",
@@ -89,6 +75,7 @@
     "eslint-plugin-redux-saga": "^0.9.0",
     "eventsource-polyfill": "0.9.6",
     "exports-loader": "0.7.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "1.1.11",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
@@ -110,6 +97,7 @@
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.3",
     "webpack-dev-middleware": "^3.1.3",
+    "webpack-dev-server": "^3.1.4",
     "webpack-hot-middleware": "^2.22.2"
   }
 }
