--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
   "author": "Dinesh Pandiyan",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server --mode development --open",
+    "start": "webpack-dev-server --mode development --open"
   },
   "dependencies": {
     "babel-polyfill": "6.26.0",
     "chalk": "^2.3.2",
+    "classnames": "^2.2.6",
     "compression": "1.7.2",
     "cross-env": "^5.1.6",
     "express": "4.16.3",
