--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-helmet": "5.2.0",
     "react-loadable": "^5.4.0",
     "react-player": "^1.6.4",
+    "react-rangeslider": "^2.2.0",
     "react-redux": "5.0.7",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "5.0.0-alpha.6",
