--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "author": "Dinesh Pandiyan",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server --mode development --open"
+    "start": "webpack-dev-server --mode development --open",
+    "build": "webpack --mode production"
   },
   "dependencies": {
     "babel-polyfill": "6.26.0",
